added new  lecturer on  the lecturer table  inside the Program manager folder

--- a/Views/ProgramManager/Lectures.cshtml
+++ b/Views/ProgramManager/Lectures.cshtml
@@ -27,8 +27,18 @@
                     <td data-label="Action">
                         <button class="btn-custom reject btn-danger">Delete</button>
                     </td>
-                </tr>
-
+                </tr> 
+                
+                 <tr>
+                     <td data-label="#">2</td>
+                     <td data-label-="lecturer">Kamohelo</td>
+                     <td data-label="Email">kamohelo@gmail.com</td>
+                     <td data-label="Fuclty">Education Fauclty</td>
+                     <td data-label="Action">
+                     <button class="btn-custom reject btn-danger">Delete</button>
+                     </td>
+                   </tr>
+  
             </tbody>
         </table>
     </div>
