Removed the # from the  table of table of approve claims and added No

--- a/Views/ProgramManager/ApproveClaims.cshtml
+++ b/Views/ProgramManager/ApproveClaims.cshtml
@@ -27,7 +27,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td data-label="#">1</td>
+                    <td data-label="No">1</td>
                     <td>Amogelang Matlhaga</td>
                     <td data-label="Sessions">5</td>
                     <td data-label="Hours">10</td>
@@ -43,7 +43,10 @@
                     </td>
                     <td data-label="Date Submitted">2025-09-02</td>
                 </tr>
-               
+                <tr>
+                    
+
+                </tr>
             </tbody>
         </table>
     </div>
