--- a/Views/Shared/_LectureHeader.cshtml
+++ b/Views/Shared/_LectureHeader.cshtml
@@ -1,7 +1,8 @@
 ﻿<header>
+    <!-- Header section containing the navigation bar -->
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container-fluid">
-            <a class="navbar-brand">CMCS</a>
+            <a class="navbar-brand">CMCS</a> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -11,11 +12,11 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Lecture" asp-action="Index">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.Action("SubmitClaim", "Lecture")">Submit Claim</a>
+                    <li class="nav-item"> 
+                        <a class="nav-link text-dark" href="@Url.Action("SubmitClaim", "Lecture")">Submit Claim</a> <!--Link to submit cliam-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.Action("TrackClaim", "Lecture")">Track Claims</a>
+                        <a class="nav-link text-dark" href="@Url.Action("TrackClaim", "Lecture")">Track Claims</a> <!--Link to  track claims -->
                     </li>
                 </ul>
 
