added comments on the  login and the error/viewModel

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         <h1 style="color: white">Contract Monthly Claim System</h1>
         <p>Welcome to CMCS!</p>
         <div class="btn-container">
-            <a href="@Url.Action("Login", "Account")" class="btn">Get Started</a>
+            <a href="@Url.Action("Login", "Account")" class="btn">Get Started</a> <!--link to loginpage-->
         </div>
     </div>
 </section>
