--- a/Views/Shared/_AdminHeader.cshtml
+++ b/Views/Shared/_AdminHeader.cshtml
@@ -13,7 +13,7 @@
                     </li>
                   
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="@Url.Action("ApproveClaims", "Admin")">Approve Claims</a>
+                        <a class="nav-link text-dark" href="@Url.Action("ApproveClaims", "Admin")">Approve Claims</a> <!--link to approve calims -->
                     </li>
                 </ul>
 
