fixed the register and trackclaim with commments

--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -73,8 +73,8 @@
             <button type="submit" class="btn-custom">Register</button>
         </form>
         <div class="links">
-            <p>Already have an account? <a href="@Url.Action("Login", "Account")">Login</a></p>
-            <p>Forgot your password? <a href="@Url.Action("ForgotPassword", "Account")">Reset</a></p>
+            <p>Already have an account? <a href="@Url.Action("Login", "Account")">Login</a></p> <!--link to loginpage-->
+            <p>Forgot your password? <a href="@Url.Action("ForgotPassword", "Account")">Reset</a></p> <!--link to forget passoword takes to register -->
         </div>
     </div>
 </div>
