i added fuctionallty  to my track claims and approve claims

--- a/Views/Lecture/TrackClaim.cshtml
+++ b/Views/Lecture/TrackClaim.cshtml
@@ -47,7 +47,7 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Check if the model contains any claims -->
+                <!-- Check if the model contains any claims 1-->
  @if (Model != null && Model.Count > 0)
                 {
                     int count = 1;
