--- a/Views/ProgramManager/ApproveClaims.cshtml
+++ b/Views/ProgramManager/ApproveClaims.cshtml
@@ -88,7 +88,7 @@
                                             Approve
                                         </button>
                                     </form>
-                                    <!-- Reject claim button -->
+                                    <!-- added fuctionaty -->
                                     <form asp-action="RejectClaims" asp-route-id="@claim.ClaimID" method="post" style="display:inline;">
                                         <button type="submit" class="claim_action_btn claim_reject"
                                                 onclick="return confirm('Reject this claim?');">
