button now works

--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -30,7 +30,7 @@
                 <ul class="navbar-nav justify-content-end flex-grow-1">
 
                     <li class="nav-item">
-                        <a class="nav-link text-dark fw-bold" href="@Url.Action("Register", "Account")">Register</a>
+                        <a class="nav-link text-dark fw-bold" href="@Url.Action("Register", "Account")">Register</a> <!-- register button works -->
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark fw-bold" href="@Url.Action("Login", "Account")">Login</a>
