--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <!-- Submit button -->
+            <!-- Submit buttons works very well  -->
             <button type="submit" class="btn-custom">Register</button>
         </form>
         <div class="links">
