--- a/Views/Account/ForgotPassword.cshtml
+++ b/Views/Account/ForgotPassword.cshtml
@@ -6,13 +6,14 @@
 <partial name="_Header" />
 
 <div class="container h-100">
+	<!-- Login Card Start -->
     <div class="login-card">
         <h1>Reset Password</h1>
         <form method="post">
             <div class="form-group">
                 <input type="text" id="email" name="email" placeholder=" " required>
                 <label for="username">Email</label>
-                <span class="error-message" id="username-error"></span>
+                <span class="error-message" id="username-error"></span>   
             </div>
             <div class="form-group password-container">
                 <input type="password" id="password" name="password" placeholder="" required>
@@ -28,7 +29,7 @@
             </div>
             <button type="submit" class="btn-custom">Reset Password</button>
         </form>
-        <div class="links">
+        <div class="links">   <!-- Links for navigation -->
             <p>All set ? <a href="@Url.Action("Login", "Account")"> Login</a></p>
             <p>Don't have an account? <a href="@Url.Action("Register", "Account")">Register</a></p>
         </div>
