--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -15,7 +15,7 @@
         {
             <div class="alert alert-danger">@ViewBag.message</div>
         }
-
+        <!-- Registration Form -->
         <form asp-action="Register" method="post">
             <div class="form-row">
                 <div class="form-group">
