Enhance comments for clarity in views
Added comments in `TrackClaim.cshtml` to clarify the purpose of the `_LectureHeader` partial view. Improved readability in `Lectures.cshtml` by indicating the start of the main container.

--- a/Views/Lecture/TrackClaim.cshtml
+++ b/Views/Lecture/TrackClaim.cshtml
@@ -2,7 +2,7 @@
 
 
 <!-- calling the header view -->
-<partial name="_LectureHeader" />
+<partial name="_LectureHeader" />  <!-- Main Container -->
 <style>
     .claim_status.approved {
         color: green;
