--- a/Views/ProgramManager/Lectures.cshtml
+++ b/Views/ProgramManager/Lectures.cshtml
@@ -4,7 +4,7 @@
 
 <!-- calling admin header -->
 <partial name="_AdminHeader" />
-
+<!-- Main Container -->
 <div class="container h-100">
     <div class="track_claims_container">
         <h1>Employee Management </h1>
